<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBg">

        <LinearLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <!--<ImageView-->
                    <!--android:id="@+id/iv_message"-->
                    <!--android:layout_width="30dp"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_margin="@dimen/dp_10"-->
                    <!--android:src="@drawable/message_normal" />-->

                <TextView
                    android:id="@+id/iv_user"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/my" />

                <TextView
                    android:id="@+id/tv_change_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="门店"
                    android:maxLength="8"
                    android:textSize="@dimen/sp_24"/>

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_change_shop"
                    android:src="@drawable/arrow_03" />
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_20">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_scanner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/icon1"
                            android:textColor="@color/icon1"
                            android:textSize="@dimen/sp_18" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_1"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>
                    <View android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line"
                        android:layout_marginTop="@dimen/dp_10"/>
                    <RelativeLayout
                        android:id="@+id/rl_price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon2"
                            android:textColor="@color/icon2"
                            android:textSize="@dimen/sp_18" />
                    </RelativeLayout>


                </TableRow>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/line"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:id="@+id/rl_query"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon3"
                            android:textColor="@color/icon5"
                            android:textSize="@dimen/sp_18"
                            android:id="@+id/textView" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_5"
                            android:layout_above="@+id/textView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="19dp"
                            android:id="@+id/imageView3" />
                    </RelativeLayout>
                    <View android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line"/>
                    <RelativeLayout
                        android:id="@+id/rl_update_goods"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon4"
                            android:textColor="@color/icon3"
                            android:textSize="@dimen/sp_18"
                            android:id="@+id/textView2" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_3"
                            android:layout_above="@+id/textView2"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="19dp"
                            android:id="@+id/imageView4" />
                    </RelativeLayout>


                </TableRow>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/line"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_service"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon5"
                            android:textColor="@color/icon4"
                            android:textSize="@dimen/sp_18" />
                    </RelativeLayout>

                    <View android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line"
                        android:layout_marginBottom="@dimen/dp_10"/>

                    <RelativeLayout
                        android:id="@+id/rl_input_and_output"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/icon6"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/sp_18" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_6"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/imageView" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    <LinearLayout
        android:id="@+id/right"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#2E2E2E"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@drawable/ren" />

        <TextView
            android:id="@+id/right_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/username"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/sp_18" />

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_update_psw"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="@dimen/dp_22"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:src="@drawable/my_serect" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginLeft="@dimen/dp_14"-->
                <!--android:text="修改密码"-->
                <!--android:textColor="@color/colorTextGary"-->
                <!--android:textSize="@dimen/sp_18" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/my_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="退出登录"
                android:textColor="@color/colorTextGary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
